@@ -1,9 +1,12 @@
 package aoc2024;
 
-import java.util.Arrays;
-import java.util.stream.IntStream;
-
 import aoc2024.days.*;
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 
 class Runner {
@@ -26,7 +29,7 @@ class Runner {
         String className = String.format("aoc2024.days.Day%s", config.dayId);
 
         try {
-            IDay day = (IDay) Class.forName(className).newInstance();
+            IDay day = (IDay) Class.forName(className).getDeclaredConstructor().newInstance();
 
             String label = config.strict ? "" : " (non-strict mode)";
             System.out.printf("Day %s%s:\n", config.dayId, label);
@@ -36,29 +39,48 @@ class Runner {
             day.part2(config.strict);
 
             System.out.println();
-        } catch (Exception e) {
+        } catch (IOException | ClassNotFoundException | IllegalAccessException | IllegalArgumentException |
+                 InstantiationException | NoSuchMethodException | SecurityException | InvocationTargetException e) {
             System.err.printf("[ERROR] Can not run day %s:\n", config.dayId);
-            e.printStackTrace();
             System.exit(1);
         }
+    }
 
+    static void runDays(List<DayConfig> configs, String message) {
+        System.out.println("========================================");
+        if (!message.isEmpty()) {
+            System.out.println(message);
+        }
+
+        configs
+            .stream()
+            .forEach(config -> runDay(config));
+        System.out.println("========================================");
     }
 
     public static void main(String[] args) throws Exception {
         String dayId = args[0];
 
         if (dayId.equals("check")) {
-            Integer dayFrom = Integer.parseInt(args[1]);
-            Integer dayTo = Integer.parseInt(args[2]);
+            Integer dayFrom = Integer.valueOf(args[1]);
+            Integer dayTo = Integer.valueOf(args[2]);
+            if (dayTo < dayFrom) {
+                System.out.printf("Bad range: %d to %d\n", dayFrom, dayTo);
+                System.exit(1);
+            }
 
-            System.out.printf("Check days %d-%s\n\n", dayFrom, dayTo);
-            IntStream
+            String message = String.format("Check days %d-%d\n", dayFrom, dayTo);
+            List<DayConfig> configs = IntStream
                 .range(dayFrom, dayTo+1)
-                .forEach(day -> runDay(new DayConfig(day, "")));
+                .mapToObj(day -> new DayConfig(day, ""))
+                .collect(Collectors.toList());
+
+            runDays(configs, message);
         } else {
-            Integer id = Integer.parseInt(dayId);
+            Integer id = Integer.valueOf(dayId);
             String inputFn = (args.length >= 2) ? args[1] : "";
-            runDay(new DayConfig(id, inputFn));
+
+            runDays(Arrays.asList(new DayConfig(id, inputFn)), "");
         }
     }
 }
